# ChangeLog for media-video/nvidia-kernel
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/nvidia-kernel/Attic/ChangeLog,v 1.138 2006/05/23 15:57:42 augustus Exp $

*nvidia-kernel-1.0.8762 (23 May 2006)

  23 May 2006; Kristopher Kersey <augustus@gentoo.org>
  +nvidia-kernel-1.0.8762.ebuild:
  Bug #134110: Add new nvidia version 1.0.8762 ebuild.

  02 May 2006; Kristopher Kersey <augustus@gentoo.org>
  -files/1.0.6629/nv-disable-preempt-on-smp_processor_id.patch,
  -files/1.0.7167/NVIDIA_kernel-1.0-7167-disable-preempt-on-smp_processor_id
  .patch, nvidia-kernel-1.0.6629-r5.ebuild,
  nvidia-kernel-1.0.7167-r1.ebuild, nvidia-kernel-1.0.7174-r2.ebuild,
  nvidia-kernel-1.0.7667.ebuild, nvidia-kernel-1.0.7676-r1.ebuild,
  nvidia-kernel-1.0.8174-r1.ebuild, nvidia-kernel-1.0.8178-r3.ebuild,
  nvidia-kernel-1.0.8756.ebuild:
  Removed disable-preempt from all ebuilds and the patches themselves from CVS.
  Bug #125368.  Also made some general cleanups of the ebuilds.

*nvidia-kernel-1.0.8756 (08 Apr 2006)

  08 Apr 2006; Kristopher Kersey <augustus@gentoo.org>
  +nvidia-kernel-1.0.8756.ebuild:
  Version bump to 8756.  Bug #129153.

  24 Mar 2006; Jeremy Huddleston <eradicator@gentoo.org> files/nvidia:
  Added note about NVreg_Mobile.  This closes bug #122295.

  24 Mar 2006; Jeremy Huddleston <eradicator@gentoo.org>
  -nvidia-kernel-1.0.6629-r4.ebuild, -nvidia-kernel-1.0.7174.ebuild,
  -nvidia-kernel-1.0.7174-r1.ebuild, -nvidia-kernel-1.0.7676.ebuild,
  -nvidia-kernel-1.0.8174.ebuild, -nvidia-kernel-1.0.8178.ebuild,
  -nvidia-kernel-1.0.8178-r1.ebuild, -nvidia-kernel-1.0.8178-r2.ebuild:
  Removing old revisions.

  24 Mar 2006; Jeremy Huddleston <eradicator@gentoo.org>
  nvidia-kernel-1.0.8178-r3.ebuild:
  Stable amd64.

*nvidia-kernel-1.0.7174-r2 (24 Jan 2006)

  24 Jan 2006; Kristopher Kersey <augustus@gentoo.org>