@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.0.6111/conftest_koutput_includes.patch 1082 RMD160 09bf3184fdc476eee84a1d8d259d6077c3f23aa2 SHA1 507d4bc1fcc53195bf7e2c0b5b378eff62199152 SHA256 c1be1a0776d5597452229a7a35e3db16752b4df2fd0591e9bdcc81583f7ed602
 MD5 b5b7f947ffb9e6c19f7457ff7c14d0db files/1.0.6111/conftest_koutput_includes.patch 1082
 RMD160 09bf3184fdc476eee84a1d8d259d6077c3f23aa2 files/1.0.6111/conftest_koutput_includes.patch 1082
@@ -238,14 +241,14 @@ EBUILD nvidia-kernel-1.0.8756.ebuild 3400 RMD160 6025d3218d9dff05f14173422d07f23
 MD5 2d39d569bfb801449908bc2ce76d4fe5 nvidia-kernel-1.0.8756.ebuild 3400
 RMD160 6025d3218d9dff05f14173422d07f231ce6e579f nvidia-kernel-1.0.8756.ebuild 3400
 SHA256 153300d1350d8c51725d3f4861da9f0673d7778a557773d29fedae2b6c400cda nvidia-kernel-1.0.8756.ebuild 3400
-EBUILD nvidia-kernel-1.0.8762.ebuild 3401 RMD160 972e60a9a7121c76bed86be7c0df8bc259ab9303 SHA1 bac9584d5118019b4abfe8eb8fa388d167245610 SHA256 84aa8f688885372d938a8c2e4680858f03716e1e1709624b51fa29d51f6e2194
-MD5 b1077fa6491f61c9c1a97db28e038971 nvidia-kernel-1.0.8762.ebuild 3401
-RMD160 972e60a9a7121c76bed86be7c0df8bc259ab9303 nvidia-kernel-1.0.8762.ebuild 3401
-SHA256 84aa8f688885372d938a8c2e4680858f03716e1e1709624b51fa29d51f6e2194 nvidia-kernel-1.0.8762.ebuild 3401
-MISC ChangeLog 35857 RMD160 20457039a970601b9574651e27fabc5328b40f8f SHA1 b781d69a727206031659adca5d690a28899e9b42 SHA256 ac23b46bff77800c57b69e404142165a1e5937e6894eaac5d0c9c14f340a96b0
-MD5 b578c04e9b805a908e5cf3811d7ffbf8 ChangeLog 35857
-RMD160 20457039a970601b9574651e27fabc5328b40f8f ChangeLog 35857
-SHA256 ac23b46bff77800c57b69e404142165a1e5937e6894eaac5d0c9c14f340a96b0 ChangeLog 35857
+EBUILD nvidia-kernel-1.0.8762.ebuild 3741 RMD160 f065217a269b9c5391f5ecf8028edc40e3f3f253 SHA1 8b34ece42dc5575e85297256203cde75870c2cf2 SHA256 e09877b4614e2b4726490ddc3a11780ccb6a3f19cd1bf2fc5100efcf3c5299f4
+MD5 fc88c6b39111c6d340cd4620917ede78 nvidia-kernel-1.0.8762.ebuild 3741
+RMD160 f065217a269b9c5391f5ecf8028edc40e3f3f253 nvidia-kernel-1.0.8762.ebuild 3741
+SHA256 e09877b4614e2b4726490ddc3a11780ccb6a3f19cd1bf2fc5100efcf3c5299f4 nvidia-kernel-1.0.8762.ebuild 3741
+MISC ChangeLog 35980 RMD160 86e6f38cb239bb72b8dd7638a5f85559501f09cb SHA1 bc84362f681e42536ef61e3fc67d04faa9093c1a SHA256 1b29699b6b9a5d10327595c001c0733f2b722529bdcf0b56fd4404d5f12f57d9
+MD5 932fbaf066fea7522e3af60905897b01 ChangeLog 35980
+RMD160 86e6f38cb239bb72b8dd7638a5f85559501f09cb ChangeLog 35980
+SHA256 1b29699b6b9a5d10327595c001c0733f2b722529bdcf0b56fd4404d5f12f57d9 ChangeLog 35980
 MISC metadata.xml 313 RMD160 417b2ced4cba92a007cc92b38487c12c4694a5af SHA1 ed7dcac820db8b3a3bc1462d43dcc452cabe5d72 SHA256 e387e047c40c29e347e4a7052356d33d694c51e58b23376c9c520ff3b53743eb
 MD5 075fe48a4f1fc90d2c3814e7bcd1d1ab metadata.xml 313
 RMD160 417b2ced4cba92a007cc92b38487c12c4694a5af metadata.xml 313
@@ -280,3 +283,10 @@ SHA256 67c9715799691ee3782422f45c95692e97302d73b9b5d4e567387f95a3c838d7 files/di
 MD5 3543fcc5c64520e4b0d03373af32741a files/digest-nvidia-kernel-1.0.8762 584
 RMD160 5e028571116dcca973c29100875771982ead6293 files/digest-nvidia-kernel-1.0.8762 584
 SHA256 274f2c212e94f3103cf2b75512baab9e85c080bb6cc98736f290ff64479149e4 files/digest-nvidia-kernel-1.0.8762 584
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEoXOA1ZcsMnZjRyIRAkebAJ9n0JImAzn1u6pRqmVvtdCY4RwLHgCeJ+iA
+huZaTOCFWQOWt8cRguInygQ=
+=nLsU
+-----END PGP SIGNATURE-----
